[package]
name = "closed-interval-set"
version = "1.3.0"
authors = ["Paul Khuong"]
edition = "2021"  # Should be 2024 compatible.
description = "Unions of closed intervals as containers of pairs"
repository = "https://github.com/pkhuong/closed-interval-set"
keywords = ["data-structures", "interval", "interval-set", "range", "set"]
categories = ["data-structures", "no-std"]
license = "MIT"

[features]
default = ["inline_storage"]
# enable self-check (can be slow, mostly useful to debug the library);
# best used with `cfg(debug_assertions)`.
internal_checks = []
# Reserve some inline space in the `SmallVec` that backs `RangeVec`s.
inline_storage = []

[dependencies]
smallvec = { version = "^1.13", features = [ "union", "const_generics" ] }

[dev-dependencies]
proptest = "1"

[lints.rust]
# Avoid warnings about `#[cfg_attr(coverage_nightly, coverage(off))]`
# https://github.com/taiki-e/cargo-llvm-cov?tab=readme-ov-file#exclude-code-from-coverage
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

# RUSTDOCFLAGS="--html-in-header katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
