[package]
name = "closed-interval-set-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.closed-interval-set]
path = ".."
default-features = false
features = []

[features]
default = ["internal_checks", "inline_storage"]
internal_checks = ["closed-interval-set/internal_checks"]
inline_storage = ["closed-interval-set/inline_storage"]

[lints.clippy]
type_complexity = "allow"  # the fuzzing macro forces tuples instead of multiple arguments

# Endpoint
# cargo fuzz list | grep endpoint_ | \
#     parallel --color --tag -P 4 --line-buffer cargo fuzz run {} -- -max_total_time=7200
[[bin]]
name = "endpoint_u8"
path = "fuzz_targets/endpoint/u8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_u16"
path = "fuzz_targets/endpoint/u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_u32"
path = "fuzz_targets/endpoint/u32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_u64"
path = "fuzz_targets/endpoint/u64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_u128"
path = "fuzz_targets/endpoint/u128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_i8"
path = "fuzz_targets/endpoint/i8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_i16"
path = "fuzz_targets/endpoint/i16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_i32"
path = "fuzz_targets/endpoint/i32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_i64"
path = "fuzz_targets/endpoint/i64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_i128"
path = "fuzz_targets/endpoint/i128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_f32"
path = "fuzz_targets/endpoint/f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "endpoint_f64"
path = "fuzz_targets/endpoint/f64.rs"
test = false
doc = false
bench = false

# normalize
# cargo fuzz list | grep normalize_ | \
#     parallel --color --tag -P 4 --line-buffer cargo fuzz run {} -- -max_total_time=7200
[[bin]]
name = "normalize_u8"
path = "fuzz_targets/normalize/u8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_u16"
path = "fuzz_targets/normalize/u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_u32"
path = "fuzz_targets/normalize/u32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_u64"
path = "fuzz_targets/normalize/u64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_u128"
path = "fuzz_targets/normalize/u128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_i8"
path = "fuzz_targets/normalize/i8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_i16"
path = "fuzz_targets/normalize/i16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_i32"
path = "fuzz_targets/normalize/i32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_i64"
path = "fuzz_targets/normalize/i64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_i128"
path = "fuzz_targets/normalize/i128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_f32"
path = "fuzz_targets/normalize/f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_f64"
path = "fuzz_targets/normalize/f64.rs"
test = false
doc = false
bench = false


# complement
# cargo fuzz list | grep complement_ | \
#     parallel --color --tag -P 4 --line-buffer cargo fuzz run {} -- -max_total_time=7200
[[bin]]
name = "complement_u8"
path = "fuzz_targets/complement/u8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_u16"
path = "fuzz_targets/complement/u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_u32"
path = "fuzz_targets/complement/u32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_u64"
path = "fuzz_targets/complement/u64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_u128"
path = "fuzz_targets/complement/u128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_i8"
path = "fuzz_targets/complement/i8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_i16"
path = "fuzz_targets/complement/i16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_i32"
path = "fuzz_targets/complement/i32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_i64"
path = "fuzz_targets/complement/i64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_i128"
path = "fuzz_targets/complement/i128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_f32"
path = "fuzz_targets/complement/f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "complement_f64"
path = "fuzz_targets/complement/f64.rs"
test = false
doc = false
bench = false


# intersect
# cargo fuzz list | grep intersect_ | \
#     parallel --color --tag -P 4 --line-buffer cargo fuzz run {} -- -max_total_time=7200
[[bin]]
name = "intersect_u8"
path = "fuzz_targets/intersect/u8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_u16"
path = "fuzz_targets/intersect/u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_u32"
path = "fuzz_targets/intersect/u32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_u64"
path = "fuzz_targets/intersect/u64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_u128"
path = "fuzz_targets/intersect/u128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_i8"
path = "fuzz_targets/intersect/i8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_i16"
path = "fuzz_targets/intersect/i16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_i32"
path = "fuzz_targets/intersect/i32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_i64"
path = "fuzz_targets/intersect/i64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_i128"
path = "fuzz_targets/intersect/i128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_f32"
path = "fuzz_targets/intersect/f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersect_f64"
path = "fuzz_targets/intersect/f64.rs"
test = false
doc = false
bench = false


# union
# cargo fuzz list | grep union_ | \
#     parallel --color --tag -P 4 --line-buffer cargo fuzz run {} -- -max_total_time=7200
[[bin]]
name = "union_u8"
path = "fuzz_targets/union/u8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_u16"
path = "fuzz_targets/union/u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_u32"
path = "fuzz_targets/union/u32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_u64"
path = "fuzz_targets/union/u64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_u128"
path = "fuzz_targets/union/u128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_i8"
path = "fuzz_targets/union/i8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_i16"
path = "fuzz_targets/union/i16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_i32"
path = "fuzz_targets/union/i32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_i64"
path = "fuzz_targets/union/i64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_i128"
path = "fuzz_targets/union/i128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_f32"
path = "fuzz_targets/union/f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "union_f64"
path = "fuzz_targets/union/f64.rs"
test = false
doc = false
bench = false
